Revamp crafting API